--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "v_coach",
+  "name": "server",
   "version": "1.0.0",
   "description": "Virtual coaching for players and teams",
   "main": "server.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "redsys",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.3",
